# Snake

./: CMakeLists.txt  lien_video.txt  server.cpp  snake.yaml  snake_gui.py
client_template/: CMakeLists.txt  snake.cpp
client_template/.cmake/api/v1/reply/: cache-v2-71878a680f986b15b014.json  cmakeFiles-v1-94375fa72b672304aca1.json  codemodel-v2-1e2811bccc8a99f46ecf.json  index-2023-03-30T10-45-26-0628.json  target-snake-Debug-5c614bb4cbce49e6791a.json
include/duels/snake/: copy.h  game.h  mechanics.h  msg.h  msg_detail.h  snake_ai.h
